# NOS

./: Makefile
NBL/: header.asm  header2.asm  kernel.asm  kernel2.asm  main.asm  run.sh  stage2.asm
kernel/: CMakeLists.txt  Makefile  linker.ld
kernel/src/: entry.S  interupts.c  interupts.h  main.c  mem.c  mem.h  storage.c  storage.h  utils.c  utils.h  vga.h
